# claude-plugins

./: .gitignore  AGENTS.md  README.md  SKILL.md  pyproject.toml
.claude-plugin/: marketplace.json
.codex/skills/: codex  cursor  gpt
.gemini/skills/: gemini
.github/workflows/: lint.yml
notes/: compatibility_strategy.md
plugins/changelog/: README.md
plugins/changelog/commands/: changelog.md
plugins/commit/: README.md
plugins/model-cli/: README.md
plugins/multi-model/: README.md
plugins/multi-model/.claude-plugin/: plugin.json
plugins/multi-model/commands/: architecture.md  ask.md  execute.md  fix-review.md  plan.md  prompt.md  review.md
plugins/rebase/: README.md
plugins/tdd/: README.md
plugins/tdd/.claude-plugin/: plugin.json
plugins/tdd/commands/: fix.md
scripts/: _private_path.py  e2e.py  marketplace.py
skills/.curated/changelog/: SKILL.md
skills/.curated/commit/: SKILL.md
skills/.curated/rebase/: SKILL.md
skills/.curated/tdd-fix/: SKILL.md
skills/.experimental/codex-cli/: SKILL.md
skills/.experimental/cursor-cli/: SKILL.md
skills/changelog/: SKILL.md
skills/codex-cli/: SKILL.md
skills/commit/: SKILL.md
skills/cursor-cli/: SKILL.md
skills/gemini-cli/: SKILL.md
skills/gpt-cli/: SKILL.md
skills/multi-model-architecture/: SKILL.md
skills/multi-model-ask/: SKILL.md
skills/multi-model-execute/: SKILL.md
skills/multi-model-fix-review/: SKILL.md
skills/multi-model-plan/: SKILL.md
skills/multi-model-prompt/: SKILL.md
skills/multi-model-review/: SKILL.md
skills/rebase/: SKILL.md
skills/tdd-fix/: SKILL.md
(+15 files in other folders)
